# Boy_or_girl_paradox_simulation

./: CMakeLists.txt  README.md
includes/: simulation.h
sources/: main.cpp  simulation.cpp
